# mol-rl

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: rl.yaml  sft.yaml
scripts/: evaluate.py  run_cloud.sh  train_rl.py  train_sft.py
src/mol_rl/: __init__.py
src/mol_rl/data/: dataset.py  prepare_data.py  selfies_tokenizer.py
src/mol_rl/eval/: __init__.py  metrics.py
src/mol_rl/models/: rewards.py
src/mol_rl/trainers/: __init__.py  reinforce.py
tests/: test_core.py
