[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mol-rl"
version = "0.1.0"
description = "Systematic comparison of PPO, RLOO, and DPO for molecular generation"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
